admissions.csv and cxr-record-list

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -489,7 +489,58 @@
       "  warnings.warn(msg)\n",
       "/Users/jiwoo_noh/Library/Python/3.9/lib/python/site-packages/torch/optim/lr_scheduler.py:28: UserWarning: The verbose parameter is deprecated. Please use get_last_lr() to access the learning rate.\n",
       "  warnings.warn(\"The verbose parameter is deprecated. Please use get_last_lr() \"\n",
-      "Train 1:  24%|██▍       | 12/49 [00:57<02:37,  4.25s/it]"
+      "Train 1: 100%|██████████| 49/49 [03:31<00:00,  4.31s/it]\n",
+      "Val 1: 100%|██████████| 10/10 [00:35<00:00,  3.53s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ep 1: Train 1.399/0.281 | Val 1.431/0.246\n",
+      "→ saved new best\n",
+      "--------------------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train 2: 100%|██████████| 49/49 [03:10<00:00,  3.88s/it]\n",
+      "Val 2: 100%|██████████| 10/10 [00:35<00:00,  3.59s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ep 2: Train 1.388/0.268 | Val 1.387/0.269\n",
+      "→ saved new best\n",
+      "--------------------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train 3: 100%|██████████| 49/49 [03:14<00:00,  3.97s/it]\n",
+      "Val 3: 100%|██████████| 10/10 [00:35<00:00,  3.58s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ep 3: Train 1.386/0.278 | Val 1.320/0.375\n",
+      "→ saved new best\n",
+      "--------------------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train 4:  80%|███████▉  | 39/49 [07:07<01:44, 10.45s/it]"
      ]
     }
    ],
@@ -508,7 +559,7 @@
     "for p in model.features.parameters(): p.requires_grad=False\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=5e-5, weight_decay=1e-4)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=1e-4, weight_decay=1e-4)\n",
     "scheduler = ReduceLROnPlateau(optimizer, mode='min', factor=0.5, patience=2, verbose=True)\n",
     "\n",
     "num_epochs, best_val_acc, freeze_epochs = 15, 0.0, 3\n",
