--- a/preprocessing_tue.ipynb
+++ b/preprocessing_tue.ipynb
@@ -402,12 +402,13 @@
     "        except:\n",
     "            corrupt_count += 1\n",
     "            # print(\"Skipping corrupted:\", path)\n",
-    "    return good\n",
+    "    return good, corrupt_count\n",
     "\n",
-    "print(corrupt_count)\n",
-    "train_items = filter_valid(train_items)\n",
-    "val_items   = filter_valid(val_items)\n",
-    "test_items  = filter_valid(test_items)\n",
+    "train_items, train_corrupt = filter_valid(train_items)\n",
+    "val_items, val_corrupt   = filter_valid(val_items)\n",
+    "test_items, test_corrupt  = filter_valid(test_items)\n",
+    "\n",
+    "sum_corrupt = train_corrupt + val_corrupt + test_corrupt\n",
     "\n",
     "print(f\"Images → train:{len(train_items)}, val:{len(val_items)}, test:{len(test_items)}\")\n",
     "\n",
