--- a/preprocessing_mon.ipynb
+++ b/preprocessing_mon.ipynb
@@ -437,30 +437,7 @@
     "    transforms.RandomErasing(p=0.3),         \n",
     "    transforms.Normalize([train_mean.item()], \n",
     "                         [train_std.item()]),\n",
-    "])\n",
-    "\n",
-    "batch_size = 32\n",
-    "\n",
-    "train_loader = DataLoader(\n",
-    "    DicomDataset(\n",
-    "        train_items, labels_dict, label2idx,\n",
-    "        transform=train_transform,\n",
-    "        strong_transform=strong_transform\n",
-    "    ),\n",
-    "    batch_size=batch_size, shuffle=True, num_workers=0, pin_memory=True\n",
-    ")\n",
-    "\n",
-    "val_loader = DataLoader(\n",
-    "    DicomDataset(val_items, labels_dict, label2idx,\n",
-    "                 transform=val_transform),\n",
-    "    batch_size=batch_size, shuffle=False, num_workers=0, pin_memory=True\n",
-    ")\n",
-    "\n",
-    "test_loader = DataLoader(\n",
-    "    DicomDataset(test_items, labels_dict, label2idx,\n",
-    "                 transform=val_transform),\n",
-    "    batch_size=batch_size, shuffle=False, num_workers=0, pin_memory=True\n",
-    ")"
+    "])"
    ]
   },
   {
@@ -571,17 +548,18 @@
     }
    ],
    "source": [
+    "import os\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "from torchvision.models import densenet121\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "from torchvision import transforms\n",
-    "import pydicom\n",
-    "import numpy as np\n",
-    "from PIL import Image\n",
-    "from tqdm import tqdm\n",
+    "from torch.utils.data import DataLoader\n",
+    "import pandas as pd\n",
     "\n",
+    "# assume DicomDataset, train_items, val_items, labels_dict, label2idx,\n",
+    "# train_transform, val_transform, strong_transform are already defined above\n",
+    "\n",
+    "# Device\n",
     "if torch.backends.mps.is_available():\n",
     "    device = torch.device(\"mps\")\n",
     "elif torch.cuda.is_available():\n",
@@ -591,89 +569,118 @@
     "print(\"Using device:\", device)\n",
     "\n",
     "unique_labels = sorted(set(labels_dict.values()))\n",
-    "label2idx     = {lab: idx for idx, lab in enumerate(unique_labels)}\n",
     "num_classes   = len(unique_labels)\n",
     "print(f\"Classes ({num_classes}): {unique_labels}\")\n",
     "\n",
-    "model = densenet121(pretrained=True)\n",
+    "# Hyperparameter grid\n",
+    "batch_size_options    = [16, 32]\n",
+    "learning_rate_options = [1e-4, 1e-5]\n",
+    "weight_decay_options  = [1e-3, 1e-4]\n",
     "\n",
-    "# swap first conv to accept 1 channel instead of 3\n",
-    "old = model.features.conv0\n",
-    "new = nn.Conv2d(1, old.out_channels, old.kernel_size,\n",
-    "                old.stride, old.padding, bias=(old.bias is not None))\n",
-    "with torch.no_grad():\n",
-    "    new.weight[:] = old.weight.mean(dim=1, keepdim=True)\n",
-    "    if old.bias is not None:\n",
-    "        new.bias[:] = old.bias\n",
-    "model.features.conv0 = new\n",
+    "# Record results\n",
+    "records = []\n",
     "\n",
-    "# replace classifier\n",
-    "model.classifier = nn.Linear(model.classifier.in_features, num_classes)\n",
-    "model = model.to(device)\n",
+    "for batch_size in batch_size_options:\n",
+    "    for learning_rate in learning_rate_options:\n",
+    "        for weight_decay in weight_decay_options:\n",
     "\n",
-    "# loss, optimizer, scheduler\n",
-    "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=1e-4, weight_decay=1e-3) # i just changed it to 3 from 4\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=7, gamma=0.1)\n",
+    "            print(f\"\\n======== batch_size={batch_size}, \"\n",
+    "                  f\"learning_rate={learning_rate}, \"\n",
+    "                  f\"weight_decay={weight_decay} ========\")\n",
     "\n",
-    "# training loop\n",
-    "num_epochs  = 5\n",
-    "best_val_acc = 0.0\n",
+    "            # DataLoaders\n",
+    "            train_loader = DataLoader(\n",
+    "                DicomDataset(train_items, labels_dict, label2idx,\n",
+    "                             transform=train_transform,\n",
+    "                             strong_transform=strong_transform),\n",
+    "                batch_size=batch_size, shuffle=True, pin_memory=True\n",
+    "            )\n",
+    "            val_loader = DataLoader(\n",
+    "                DicomDataset(val_items, labels_dict, label2idx,\n",
+    "                             transform=val_transform),\n",
+    "                batch_size=batch_size, shuffle=False, pin_memory=True\n",
+    "            )\n",
+    "            test_loader = DataLoader(\n",
+    "                DicomDataset(val_items, labels_dict, label2idx,\n",
+    "                             transform=val_transform),\n",
+    "                batch_size=batch_size, shuffle=False, pin_memory=True\n",
+    "            )\n",
     "\n",
-    "for epoch in range(1, num_epochs+1):\n",
-    "    # Train\n",
-    "    model.train()\n",
-    "    running_loss = 0.0\n",
-    "    correct = total = 0\n",
-    "    for imgs, labs in tqdm(train_loader, desc=f\"Epoch {epoch} ▶ Train\"):\n",
-    "        imgs = imgs.to(device)\n",
-    "        labs = labs.to(device)\n",
+    "            # Build model\n",
+    "            model = densenet121(pretrained=True)\n",
+    "            old_conv = model.features.conv0\n",
+    "            new_conv = nn.Conv2d(\n",
+    "                in_channels=1,\n",
+    "                out_channels=old_conv.out_channels,\n",
+    "                kernel_size=old_conv.kernel_size,\n",
+    "                stride=old_conv.stride,\n",
+    "                padding=old_conv.padding,\n",
+    "                bias=(old_conv.bias is not None)\n",
+    "            )\n",
+    "            with torch.no_grad():\n",
+    "                new_conv.weight[:] = old_conv.weight.mean(dim=1, keepdim=True)\n",
+    "                if old_conv.bias is not None:\n",
+    "                    new_conv.bias[:] = old_conv.bias\n",
+    "            model.features.conv0 = new_conv\n",
+    "            model.classifier = nn.Linear(model.classifier.in_features, num_classes)\n",
+    "            model = model.to(device)\n",
     "\n",
-    "        optimizer.zero_grad()\n",
-    "        out = model(imgs)\n",
-    "        loss = criterion(out, labs)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
+    "            # Optimizer & scheduler\n",
+    "            criterion = nn.CrossEntropyLoss()\n",
+    "            optimizer = optim.Adam(\n",
+    "                model.parameters(), lr=learning_rate,\n",
+    "                weight_decay=weight_decay\n",
+    "            )\n",
+    "            scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=7, gamma=0.1)\n",
     "\n",
-    "        running_loss += loss.item() * imgs.size(0)\n",
-    "        preds = out.argmax(dim=1)\n",
-    "        correct += (preds == labs).sum().item()\n",
-    "        total   += labs.size(0)\n",
+    "            # Train/Validate\n",
+    "            best_val_accuracy = 0.0\n",
+    "            for epoch in range(1, 16):\n",
+    "                # train\n",
+    "                model.train()\n",
+    "                for imgs, labs in train_loader:\n",
+    "                    imgs, labs = imgs.to(device), labs.to(device)\n",
+    "                    optimizer.zero_grad()\n",
+    "                    loss = criterion(model(imgs), labs)\n",
+    "                    loss.backward()\n",
+    "                    optimizer.step()\n",
+    "                # val\n",
+    "                model.eval()\n",
+    "                val_correct = val_total = 0\n",
+    "                with torch.no_grad():\n",
+    "                    for imgs, labs in val_loader:\n",
+    "                        imgs, labs = imgs.to(device), labs.to(device)\n",
+    "                        preds = model(imgs).argmax(1)\n",
+    "                        val_correct += (preds == labs).sum().item()\n",
+    "                        val_total += labs.size(0)\n",
+    "                val_acc = val_correct / val_total\n",
+    "                scheduler.step()\n",
+    "                best_val_accuracy = max(best_val_accuracy, val_acc)\n",
     "\n",
-    "    train_loss = running_loss / total\n",
-    "    train_acc  = correct / total\n",
+    "            print(f\"→ Best validation accuracy = {best_val_accuracy:.4f}\")\n",
     "\n",
-    "    # Validate\n",
-    "    model.eval()\n",
-    "    val_loss = correct = total = 0\n",
-    "    with torch.no_grad():\n",
-    "        for imgs, labs in tqdm(val_loader, desc=f\"Epoch {epoch} ▶ Val\"):\n",
-    "            imgs = imgs.to(device)\n",
-    "            labs = labs.to(device)\n",
+    "            # Save model\n",
+    "            fname = f\"model_bs_{batch_size}_lr_{learning_rate}_wd_{weight_decay}.pt\"\n",
+    "            torch.save(model.state_dict(), fname)\n",
+    "            records.append({\n",
+    "                \"batch_size\": batch_size,\n",
+    "                \"learning_rate\": learning_rate,\n",
+    "                \"weight_decay\": weight_decay,\n",
+    "                \"best_val_accuracy\": best_val_accuracy,\n",
+    "                \"model_file\": fname\n",
+    "            })\n",
     "\n",
-    "            out = model(imgs)\n",
-    "            loss = criterion(out, labs)\n",
+    "# Summarize\n",
+    "import pandas as pd\n",
+    "results_df = pd.DataFrame(records)\n",
+    "results_df = results_df.sort_values(\"best_val_accuracy\", ascending=False).reset_index(drop=True)\n",
+    "print(\"\\nAll runs sorted by validation accuracy:\")\n",
+    "print(results_df)\n",
     "\n",
-    "            val_loss += loss.item() * imgs.size(0)\n",
-    "            preds = out.argmax(dim=1)\n",
-    "            correct += (preds == labs).sum().item()\n",
-    "            total   += labs.size(0)\n",
-    "\n",
-    "    val_loss /= total\n",
-    "    val_acc   = correct / total\n",
-    "    scheduler.step()\n",
-    "\n",
-    "    print(f\"\\nEpoch {epoch}/{num_epochs}\"\n",
-    "          f\" — Train Loss: {train_loss:.4f}, Acc: {train_acc:.4f}\"\n",
-    "          f\" | Val Loss: {val_loss:.4f}, Acc: {val_acc:.4f}\")\n",
-    "\n",
-    "    if val_acc > best_val_acc:\n",
-    "        best_val_acc = val_acc\n",
-    "        torch.save(model.state_dict(), \"best_densenet_ethnicity.pt\")\n",
-    "        print(\"→ New best model saved\")\n",
-    "    print(\"-\"*60)\n",
-    "\n",
-    "print(f\"Done. Best Val Acc: {best_val_acc:.4f}\")\n"
+    "# Rename best model to best_densenet_ethnicity.pt\n",
+    "best_file = results_df.loc[0, \"model_file\"]\n",
+    "os.replace(best_file, \"best_densenet_ethnicity.pt\")\n",
+    "print(f\"Renamed {best_file} → best_densenet_ethnicity.pt\")\n"
    ]
   },
   {
