--- a/preprocessing_mon.ipynb
+++ b/preprocessing_mon.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jiwoo_noh/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -38,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -152,18 +143,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Classes: ['ASIAN', 'BLACK/AFRICAN AMERICAN', 'HISPANIC/LATINO', 'WHITE']\n",
-      "Mapping: {'ASIAN': 0, 'BLACK/AFRICAN AMERICAN': 1, 'HISPANIC/LATINO': 2, 'WHITE': 3}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, pydicom, pandas as pd\n",
     "from pydicom import config\n",
@@ -210,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -555,9 +537,6 @@
     "from torchvision.models import densenet121\n",
     "from torch.utils.data import DataLoader\n",
     "import pandas as pd\n",
-    "\n",
-    "# assume DicomDataset, train_items, val_items, labels_dict, label2idx,\n",
-    "# train_transform, val_transform, strong_transform are already defined above\n",
     "\n",
     "# Device\n",
     "if torch.backends.mps.is_available():\n",
@@ -685,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1029,6 +1008,113 @@
     "    ax = axes[i,1]\n",
     "    ax.imshow(overlay)\n",
     "    ax.set_title(\"SHAP overlay\")\n",
+    "    ax.axis('off')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grad-CAM\n",
+    "\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "import matplotlib.pyplot as plt\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "# assume `model`, `test_loader`, and `unique_labels` are already defined\n",
+    "device = next(model.parameters()).device\n",
+    "model.eval()\n",
+    "\n",
+    "# 1) pick one correctly classified example per class\n",
+    "sample_imgs, sample_labels = [], []\n",
+    "for cls_idx, cls_name in enumerate(unique_labels):\n",
+    "    found = False\n",
+    "    for imgs, labs in test_loader:\n",
+    "        imgs, labs = imgs.to(device), labs.to(device)\n",
+    "        with torch.no_grad():\n",
+    "            preds = model(imgs).argmax(1)\n",
+    "        for b in range(imgs.size(0)):\n",
+    "            if labs[b].item() == cls_idx and preds[b].item() == cls_idx:\n",
+    "                sample_imgs.append(imgs[b].cpu())\n",
+    "                sample_labels.append(cls_idx)\n",
+    "                found = True\n",
+    "                break\n",
+    "        if found:\n",
+    "            break\n",
+    "\n",
+    "if len(sample_imgs) == 0:\n",
+    "    raise RuntimeError(\"No correctly predicted samples found!\")\n",
+    "\n",
+    "# stack into (N,1,H,W)\n",
+    "sample_imgs = torch.stack(sample_imgs)\n",
+    "\n",
+    "# 2) register hooks on the last DenseNet feature map\n",
+    "activations = {}\n",
+    "gradients   = {}\n",
+    "def forward_hook(module, inp, out):\n",
+    "    activations['feat'] = out\n",
+    "def backward_hook(module, grad_in, grad_out):\n",
+    "    gradients['grad'] = grad_out[0]\n",
+    "\n",
+    "target_layer = model.features.norm5\n",
+    "fh = target_layer.register_forward_hook(forward_hook)\n",
+    "bh = target_layer.register_backward_hook(backward_hook)\n",
+    "\n",
+    "# 3) compute Grad-CAM maps\n",
+    "cams = []\n",
+    "for i in range(sample_imgs.size(0)):\n",
+    "    x = sample_imgs[i:i+1].to(device)\n",
+    "    model.zero_grad()\n",
+    "    out = model(x)\n",
+    "    cls = sample_labels[i]\n",
+    "    out[0, cls].backward()\n",
+    "\n",
+    "    feat = activations['feat'][0]    # C×h×w\n",
+    "    grad = gradients  ['grad'][0]    # C×h×w\n",
+    "    weights = grad.mean(dim=(1,2))   # C\n",
+    "    cam = (weights[:,None,None] * feat).sum(dim=0).cpu().numpy()\n",
+    "    cam = np.maximum(cam, 0)\n",
+    "    cams.append(cam)\n",
+    "\n",
+    "# remove hooks\n",
+    "fh.remove()\n",
+    "bh.remove()\n",
+    "\n",
+    "# 4) visualize: N×2 grid\n",
+    "n = sample_imgs.size(0)\n",
+    "fig, axes = plt.subplots(nrows=n, ncols=2, figsize=(6, 3*n), squeeze=False)\n",
+    "\n",
+    "for i in range(n):\n",
+    "    # original image\n",
+    "    img = sample_imgs[i,0].numpy()  # H×W\n",
+    "\n",
+    "    # process CAM → upsample → colourmap → overlay\n",
+    "    cam  = cams[i]\n",
+    "    cam  = (cam - cam.min())/(cam.max()-cam.min()+1e-8)\n",
+    "    cam  = cv2.resize(cam, (img.shape[1], img.shape[0]),\n",
+    "                      interpolation=cv2.INTER_LINEAR)\n",
+    "    heat = cv2.applyColorMap((cam*255).astype(np.uint8),\n",
+    "                              cv2.COLORMAP_JET)[...,::-1]/255.0\n",
+    "    overlay = 0.4*heat + 0.6*np.dstack([img]*3)\n",
+    "\n",
+    "    # plot original\n",
+    "    ax = axes[i,0]\n",
+    "    lbl = unique_labels[sample_labels[i]]\n",
+    "    ax.imshow(img, cmap='gray')\n",
+    "    ax.set_title(f\"True & Predicted: {lbl}\")\n",
+    "    ax.axis('off')\n",
+    "\n",
+    "    # plot Grad-CAM overlay\n",
+    "    ax = axes[i,1]\n",
+    "    ax.imshow(overlay)\n",
+    "    ax.set_title(\"Grad-CAM overlay\")\n",
     "    ax.axis('off')\n",
     "\n",
     "plt.tight_layout()\n",
